--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,3 +25,4 @@ androidx-material3-android = { group = "androidx.compose.material3", name = "mat
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+maven-publish = { id = "maven-publish" }
