--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="[your package]"
+<manifest package="app.pickle.composepincodeview"
     android:versionCode="2"
     android:versionName="0.3.0"
     xmlns:android="http://schemas.android.com/apk/res/android">
